src/Components/footer.css
@media screen and (min-width: 480px) {
  .bar {
    margin: 10px 0;
    width: 100px;
    height: 1px;
    background-color: rgb(255, 255, 255, 0.5);
  }
}
@media screen and (max-width: 770px) {
  .bar {
    margin: 5px 0;
    width: 100px;
    height: 1px;
    background-color: rgb(255, 255, 255, 0.5);
    /* display: none; */
    justify-content: start;
    text-align: left;
  }
  .footer-edit {
    justify-content: start;
    flex-direction: column;
    align-items: start;
    gap: 0;
  }
}
@media screen and (max-width: 481px) {
  .bar {
    height: 120px;
    width: 1px;
    background-color: rgb(255, 255, 255, 0.5);
  }
  .footer-edit {
    justify-content: space-around;

    align-items: center;
    flex-direction: row;
  }
  .footer-text {
    max-width: 80px;
  }
}

